--- a/index.html
+++ b/index.html
@@ -44,19 +44,25 @@
             </div>
           </div>
           <div class="filter-area">
-            <form>              
-              <select name="" id="mostRecent">
-                <option value="">Most Recent</option>
-                <option value="24hours">24Hours Ago</option>
-                <option value="3days">3Days Ago </option>
-                <option value="5Days">5Days Ago </option>
-                <option value="1Week">1Week Ago </option>
-              </select>
-              <select name="sort" id="sort">
-                <option value="">Sort By</option>
-                <option value="Ascending">Ascending</option>
-                <option value="Descending">Descending </option>
-              </select>
+            <form>   
+              <div class="filterGroup">
+                <div class="sselect">
+                  <select name="" id="mostRecent">
+                    <option value="">Most Recent</option>
+                    <option value="24hours">24Hours Ago</option>
+                    <option value="3days">3Days Ago </option>
+                    <option value="5Days">5Days Ago </option>
+                    <option value="1Week">1Week Ago </option>
+                  </select>
+                </div>
+                <div class="sselect">
+                  <select name="sort" id="sort">
+                    <option value="">Sort By</option>
+                    <option value="Ascending">Ascending</option>
+                    <option value="Descending">Descending </option>
+                  </select>
+                </div>
+              </div>
             </form>
           </div>
         </div>
