--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
   </head>
 
   <body>
-  <h1>Test</h1>
+  <h1>Hi! I am Sanjay,<br>
+a UI UX<br>
+Developer<br>
+Occasionally Teacher | Designer | Blogger </h1>
+
+    <h2>Mail : sansahajay19@gmail.com</h2>
+    <h3>Contact : 9051921933</h3>
     
   </body>
 </html>
