--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
   <body>
   <h1>Hi! I am Sanjay,<br>
 a UI UX<br>
-Developer<br>
-Occasionally Teacher | Designer | Blogger </h1>
+Developer<br></h1>
+<h3>Occasionally Teacher | Designer | Blogger </h3>
 
-    <h2>Mail : sansahajay19@gmail.com</h2>
-    <h3>Contact : 9051921933</h3>
+    <h4>Mail : sansahajay19@gmail.com</h4>
+    <h5>Contact : 9051921933</h5>
     
   </body>
 </html>
