--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
   </head>
 
   <body>
+    <div style="margin: 50% auto;">
   <h1>Hi! I am Sanjay,<br>
 a UI UX<br>
 Developer<br></h1>
@@ -26,6 +27,6 @@ Developer<br></h1>
 
     <h4>Mail : sansahajay19@gmail.com</h4>
     <h5>Contact : 9051921933</h5>
-    
+    </div>
   </body>
 </html>
