--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </head>
 
   <body>
-    <div style="margin: 50% auto;">
+    <div style="margin: 10% auto; width : fit-content;">
   <h1>Hi! I am Sanjay,<br>
 a UI UX<br>
 Developer<br></h1>
