--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <!-- Additional CSS Files -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- Custom Style 
-    <link rel="stylesheet" href="assets/css/master.css">-->
+    <!-- Custom Style -->
+    <link rel="stylesheet" href="assets/css/master.css">
 
   </head>
 
