--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
   <body>
     <div style="margin: 10% auto; width : fit-content;">
-  <h1>Hi! I am Sanjay,<br>
+  <h1>Hi! I am<br> Sanjay,<br>
 a UI UX<br>
 Developer<br></h1>
 <h3>Occasionally Teacher | Designer | Blogger </h3>
