--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <div style="margin: 10% auto; width : fit-content;">
   <h1>Hi! I am<br> Sanjay,<br>
 a UI UX<br>
-Developer<br></h1>
-<h3>Occasionally Teacher | Designer | Blogger </h3>
+Developer</h1><br>
+<h3>Occasionally Teacher | Designer | Blogger </h3><br>
 
-    <h4>Mail : sansahajay19@gmail.com</h4>
+    <h4>Mail : sansahajay19@gmail.com</h4><br>
     <h5>Contact : 9051921933</h5>
     </div>
   </body>
